<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NuevoActivity">

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_nombre"
        android:inputType="text"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/txtTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_telefono"
        android:ems="10"
        android:inputType="phone"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/txtCorreoElectronico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_correo_electronico"
        android:ems="10"
        android:textSize="24sp" />

    <Button
        android:id="@+id/BtnGuarda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/btn_guardar"
        android:text="GUARDAR REGISTRO"
        android:textSize="24sp"/>

</LinearLayout>